Ajuste sidebar y pacientes

--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -43,9 +43,10 @@
                 <div class="icon">
                     <i class="fas fa-cash-register"></i>
                 </div>
-                <span class="small-box-footer text-white-50 d-block">Más información <i class="fas fa-arrow-circle-right"></i></span>
+                <span class="small-box-footer text-white-50 d-block">Más información <i
+                        class="fas fa-arrow-circle-right"></i></span>
 
-              <!--  <a href="#" class="small-box-footer">
+                <!--  <a href="#" class="small-box-footer">
                     Más información <i class="fas fa-arrow-circle-right"></i>
                 </a>-->
             </div>
@@ -61,15 +62,14 @@
                 <div class="icon">
                     <i class="fas fa-clipboard-list"></i>
                 </div>
-                <span class="small-box-footer text-white-50 d-block">Más información <i class="fas fa-arrow-circle-right"></i></span>
-               <!-- <a href="#" class="small-box-footer">
+                <span class="small-box-footer text-white-50 d-block">Más información <i
+                        class="fas fa-arrow-circle-right"></i></span>
+                <!-- <a href="#" class="small-box-footer">
                     Más información <i class="fas fa-arrow-circle-right"></i>
                 </a>-->
             </div>
         </div>
     </div>
-
-
 
     <!-- 🔹 Gráficos -->
     <div *ngIf="datosLocales" class="row g-4">
