--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -43,22 +43,11 @@
       <!-- Right navbar links -->
       <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
 
-        <!-- 🟦 Bloque izquierdo: sede y tasas -->
-        <div class="d-flex align-items-center ps-0 gap-4">
-          <!-- 📍 Sede activa -->
-          <div class="navbar-sede">
-            📍 Sede: <strong>{{ sedeActual | titlecase }}</strong>
-          </div>
-          <div style="width: 1px; height: 32px; background-color: rgba(255,255,255,0.3);"></div>
-
-          <!-- 💱 Bloque de tasas en columna -->
-          <div class="navbar-info-block d-flex flex-column">
-            <span>💵 <strong>USD:</strong> {{ tasaDolar | number:'1.2-2' }} Bs</span>
-            <span>💶 <strong>EUR:</strong> {{ tasaEuro | number:'1.2-2' }} Bs</span>
-          </div>
+        <!-- 💱 Bloque de tasas en columna -->
+        <div class="navbar-info-block d-flex flex-column">
+          <span>💵 <strong>USD:</strong> {{ tasaDolar | number:'1.2-2' }} Bs</span>
+          <span>💶 <strong>EUR:</strong> {{ tasaEuro | number:'1.2-2' }} Bs</span>
         </div>
-
-
 
         <!-- 🔍 Bloque derecho: buscador -->
         <li class="nav-item">
@@ -89,12 +78,15 @@
 
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar main-sidebar-custom sidebar-dark-primary elevation-4">
-      <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <!--<img src="./../../assets/logo/logo_1.png" alt="New Vision Logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">-->
-        <span class="brand-text font-weight-bold">New Vision</span>
-      </a>
+
+        <!-- 📍 Sede activa -->
+        <div class="navbar-sede align-items-center">
+          📍 Sede <strong>{{ sedeActual | titlecase }}</strong>
+        </div>
+      
+
+ 
+
 
       <!-- Sidebar -->
       <div class="sidebar">
