--- a/src/app/view/sidebar/sidebar.component.scss
+++ b/src/app/view/sidebar/sidebar.component.scss
@@ -35,14 +35,14 @@
   font-weight: bold;
   text-transform: none;
   letter-spacing: 1.2px;
-  color: var( --details-color);
+  color: var(--details-color);
   transition: color 0.3s ease, transform 0.3s ease;
   text-align: center;
   align-items: center;
 }
 
 .brand-text:hover {
- // color: #0078d7;
+  // color: #0078d7;
   /* Azul vibrante */
   transform: scale(1.05);
 }
@@ -68,7 +68,7 @@
 
 /* Links en el Sidebar */
 .main-sidebar .nav-sidebar>.nav-item>.nav-link {
-  color: var( --secondary-color) !important;
+  color: var(--secondary-color) !important;
   /* Color de texto azul oscuro */
 
 }
@@ -172,7 +172,7 @@
 
 
 .nav-link {
-  color: var( --details-color) !important;
+  color: var(--details-color) !important;
   font-weight: lighter;
 }
 
@@ -189,14 +189,18 @@
   line-height: 1.4;
   font-family: 'Segoe UI';
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+ // padding: 10px;
+ // text-align: right;
 }
 
 .navbar-sede {
-  font-size: 1.15rem;
+  font-size: 1.2rem;
   font-weight: bold;
   color: #ffffff;
   font-family: 'Segoe UI';
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  text-align: center;
+  padding: 14px;
 }
 
 
