--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <!-- 🔹 Gráficos -->
+    <!-- 🔹 Gráficoss -->
     <div *ngIf="datosLocales" class="row g-4">
         <div class="col-md-6">
             <div class="card shadow-sm border-0">
