modulo pacientes e historias medicas

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -50,6 +50,7 @@ $warn: mat.m2-get-color-from-palette($warn-palette, 'default');
   --border-color: var(--primary-color);
   --details-color: #FFC107;
   --success-color: #38a169;
+  --font-color-form : #6c757d;
 
   // Variables de diseño
   --border-radius: 4px;
