--- a/src/app/view/pacientes/pacientes.component.scss
+++ b/src/app/view/pacientes/pacientes.component.scss
@@ -68,27 +68,26 @@
 
 /* Estilo moderno para scroll vertical */
 .modal-body::-webkit-scrollbar {
-  width: 8px;
+    width: 8px;
 }
 
 .modal-body::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 4px;
+    background: transparent;
+    border-radius: 4px;
 }
 
 .modal-body::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 123, 255, 0.5); /* azul translúcido */
-  border-radius: 4px;
-  border: 2px solid transparent;
-  background-clip: content-box;
-  transition: background-color 0.3s ease;
+    background-color: rgba(0, 123, 255, 0.5);
+    /* azul translúcido */
+    border-radius: 4px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+    transition: background-color 0.3s ease;
 }
 
 .modal-body::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 123, 255, 0.8);
+    background-color: rgba(0, 123, 255, 0.8);
 }
-
-
 
 //Modal detalles de pacientes
 .modal-title {
@@ -101,26 +100,47 @@
     background: var(--degradado-pastel) !important;
 }
 
-.text-dark {
-    color: #343a40 !important;
+.list-group {
+    border: none !important;
+}
+
+.text-dark-label {
+    color: var(--formLabel-color) !important;
     margin-bottom: 0px;
     font-weight: 400 !important;
     font-size: 18px;
 }
 
-.alert-warning{
+.text-muted {
+    color: var(--font-color-form) !important;
+    margin-bottom: 0px;
+    font-weight: 400 !important;
+    font-size: 18px;
+}
+
+.alert-warning {
     background-color: var(--details-color) !important;
 }
 
 .text-secondary {
     margin-top: 0;
     margin-bottom: 3px;
+    // color: var(--primary-color) !important;
+     color: var(--formLabel-color) !important;
+    font-size: 18px;
+}
+
+.text-primary {
+    margin-top: 0;
+    margin-bottom: 3px;
+    //    color: var(--details-color) !important;
     color: var(--primary-color) !important;
     font-size: 20px;
 }
 
-.sortable {
-  cursor: pointer;
-  user-select: none;
-}
 
+
+.sortable {
+    cursor: pointer;
+    user-select: none;
+}
