--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -45,7 +45,7 @@ $warn: mat.m2-get-color-from-palette($warn-palette, 'default');
 
   // Colores de UI
   --card-color: #f0f0f5;
-  --formInput-color: #333;
+  --formLabel-color: #333;
   --text-color: white;
   --border-color: var(--primary-color);
   --details-color: #FFC107;
