--- a/src/app/view/sidebar/sidebar.component.scss
+++ b/src/app/view/sidebar/sidebar.component.scss
@@ -197,12 +197,9 @@
   color: #ffffff;
   font-family: 'Segoe UI';
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-  text-align: center;
+  text-align: justify;
   padding: 14px;
 }
-
-
-
 
 /* Íconos del Navbar */
 .main-header .fas {
