--- a/src/app/view/tasa-cambiaria/tasa.component.html
+++ b/src/app/view/tasa-cambiaria/tasa.component.html
@@ -3,7 +3,7 @@
     <div class="card-header bg-primary text-white d-flex align-items-center justify-content-between">
       <h4 class="mb-0">💰 Tasa de Cambio</h4>
       <div class="ms-auto">
-        <button class="btn btn-light btn-sm" (click)="actualizarYRecargarTasasDesdeBCV()"> <i
+        <button class="btn btn-light btn-sm" (click)="actualizarYMostrarTasasDesdeBCV()"> <i
             class="bi bi-cloud-arrow-down-fill me-2"></i> Actualizar desde BCV
 
         </button>
@@ -24,8 +24,7 @@
 
           <p class="fs-3 text-success">
             <ng-container *ngIf="!loadingBCV[tasa.id]; else cargandoBCV">
-              {{ metodoTasa[tasa.id] === 'bcv' ? tasa.valor : tasaManual[tasa.id] || 0 }} {{ tasa.simbolo
-              }}
+              {{ obtenerValorVisual(tasa.id) }} {{ tasa.simbolo }}
             </ng-container>
             <ng-template #cargandoBCV>
               ⏳ Actualizando...
@@ -35,9 +34,11 @@
           <div class="text-muted small fst-italic">
             <span class="d-block">
               Tasa oficial BCV:
+
               <ng-container *ngIf="bcvDisponible[tasa.id]; else noDisponible">
                 {{ valorBCV[tasa.id] }} {{ tasa.simbolo }}
               </ng-container>
+
               <ng-template #noDisponible>
                 <span class="bcv-unavailable">No disponible en este momento</span>
               </ng-template>
@@ -52,7 +53,7 @@
             </small>
             <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" [(ngModel)]="autoActualizar[tasa.id]"
-                (change)="activarRastreoBCVConSincronizacion(tasa.id)">
+                (change)="activarRastreoBCVAutomatico(tasa.id)">
               <label class="form-check-label">Auto</label>
             </div>
           </div>
@@ -74,11 +75,19 @@
               </button>
             </ng-container>
 
-            <ng-container *ngSwitchCase="'manual'">
-              <button class="btn btn-sm btn-success w-100 mb-1" (click)="updateTasaBCVPorId(tasa.id)">
-                Actualizar a Tasa BCV
+            <ng-container *ngSwitchCase="'automatico'">
+              <button class="btn btn-sm btn-primary w-100 mb-1" (click)="abrirPopover(tasa.id)">
+                Ingresar Tasa Manual
               </button>
             </ng-container>
+
+            <ng-container *ngSwitchCase="'manual'">
+              <button class="btn btn-sm btn-success w-100 mb-1" [disabled]="loadingBCV[tasa.id]"
+                (click)="updateTasaBCVPorId(tasa.id)">
+                {{ loadingBCV[tasa.id] ? 'Actualizando...' : 'Actualizar a Tasa BCV' }}
+              </button>
+            </ng-container>
+
           </ng-container>
 
           <button class="btn btn-sm btn-secondary w-100 mb-1" (click)="verHistorial(tasa.id)">
