Ajuste dashboard y pacientes

--- a/src/app/view/dashboard/graficos/grafico-pacientes-por-mes/grafico-pacientes-por-mes.component.html
+++ b/src/app/view/dashboard/graficos/grafico-pacientes-por-mes/grafico-pacientes-por-mes.component.html
@@ -1,5 +1,5 @@
 <div class="card shadow-sm border-0">
-  <div class="card-header bg-white fw-bold text-muted">📅 Distribución mensual</div>
+  <div class="card-header bg-white fw-bold text-muted">👥 Pacientes</div>
   <div class="card-body">
     <canvas baseChart
       [type]="chartType"
