--- a/src/app/view/pacientes/pacientes.component.html
+++ b/src/app/view/pacientes/pacientes.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
 
-    <div class="card-body">
+    <div class="card-body" style="background: var(--degradado-pastel) !important;">
       <div class="row mb-3">
         <div class="col-md-4">
           <label for="filtroSede" class="form-label">📍 Filtrar por sede</label>
