--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
     rel="stylesheet">
 </head>
 
-<body class="hold-transition sidebar-mini layout-fixed">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed">
   <!-- Site wrapper -->
   <div class="wrapper">
     <!-- Navbar -->
@@ -82,7 +82,7 @@
       </div>
 
       <!-- Sidebar -->
-      <div class="sidebar">
+      <div class="sidebar" style="margin-top: 0px !important;">
         <!-- Sidebar user panel -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
@@ -161,7 +161,7 @@
       <div class="float-right d-none d-sm-block">
         <b>Versión</b> 1.0
       </div>
-      <strong>Copyright &copy; 2025 | Apollo Group - Academia Deportiva.</strong> All rights reserved.
+      <strong>Copyright &copy; 2025 | New Vision Lens- Óptica.</strong> All rights reserved.
     </footer>
 
     <!-- Control Sidebar -->
