--- a/src/app/view/sidebar/sidebar.component.scss
+++ b/src/app/view/sidebar/sidebar.component.scss
@@ -61,9 +61,16 @@
 /*======================== SIDEBAR ========================*/
 .main-sidebar {
   background: var(--degradado-color) !important;
-  /* Fondo negro */
   color: var(--secondary-color);
   font-weight: bold;
+
+  position: fixed;
+  top: 0px !important; /* Altura del navbar fijo */
+  bottom: 60px; /* Altura del footer fijo */
+  height: calc(100vh - 116px); /* 100% de pantalla menos header y footer */
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 1020;
 }
 
 /* Links en el Sidebar */
@@ -161,6 +168,7 @@
 
 /*======================== NAVBAR ========================*/
 .main-header {
+  position: fixed;
   background: var(--degradado-color) !important;
   /* Fondo negro */
   border-bottom: 2px solid var(--primary-color);
@@ -214,6 +222,14 @@
   color: var(--primary-color) !important;
   /* Texto amarillo */
   border-top: 2px solid var(--primary-color);
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1020; /* menor que el navbar para evitar solapamiento */
+  height: 60px; /* ajusta según diseño */
+  background-color: var(--secondary-color);
   /* Borde amarillo en la parte superior */
 }
 
@@ -262,6 +278,30 @@
   align-content: center;
   /* Centra horizontalmente el contenido */
 }
+
+//scroll
+/* styles.scss o dentro del componente si el modal está aislado */
+.modal-body::-webkit-scrollbar {
+  width: 8px;
+}
+
+.modal-body::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 4px;
+}
+
+.modal-body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 123, 255, 0.5);
+  border-radius: 4px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: background-color 0.3s ease;
+}
+
+.modal-body::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 123, 255, 0.8);
+}
+
 
 /* Botón de guardar */
 button.btn-success {
