--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -68,6 +68,30 @@ $warn: mat.m2-get-color-from-palette($warn-palette, 'default');
   overflow-x: auto !important;
 }
 
+//scroll
+::ng-deep .ng-dropdown-panel .ng-dropdown-panel-items::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::ng-deep .ng-dropdown-panel .ng-dropdown-panel-items::-webkit-scrollbar-track {
+  background: #f5f5f5;
+  border-radius: 4px;
+}
+
+::ng-deep .ng-dropdown-panel .ng-dropdown-panel-items::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 123, 255, 0.5);
+  border-radius: 4px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: background-color 0.3s ease;
+}
+
+::ng-deep .ng-dropdown-panel .ng-dropdown-panel-items::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 123, 255, 0.8);
+}
+
+
 
 
 
